--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,8 +2,13 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
-.countainer {
+.container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
+}
+
+.image {
+    width: 30%;
+    margin-top: 50px;
 }
